spade-tests/src/snapshots/spade_tests__ast_lowering__include_bytes_macro_without_tokens.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test() -> bool {
    include_bytes!()
}


error: Incorrect number of tokens passed to `include_bytes!`
  ┌─ testinput:2:5
  │
2 │     include_bytes!()
  │     ^^^^^^^^^^^^^
  │
  = note: A single string literal containing the path to include must be passed
